// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Organization should render with organization permitted by default, and expand data when button is clicked 1`] = `
<div
  class="Expander__ExpanderContainer-sc-fukmjx-0 fExEJK"
>
  <button
    aria-pressed="false"
    class="Expander__ExpanderTitle-sc-fukmjx-2 ekUJgW"
  >
    <span
      aria-hidden="true"
      class="Expander__ExpanderPrefix-sc-fukmjx-1 cWphqs"
    >
      +
    </span>
    Organisaatio 1
  </button>
</div>
`;

exports[`Organization should render with organization permitted by default, and expand data when button is clicked 2`] = `
<div
  class="Expander__ExpanderContainer-sc-fukmjx-0 fExEJK"
>
  <button
    aria-pressed="true"
    class="Expander__ExpanderTitle-sc-fukmjx-2 gkGJNz"
  >
    <span
      aria-hidden="true"
      class="Expander__ExpanderPrefix-sc-fukmjx-1 cWphqs"
    >
      -
    </span>
    Organisaatio 1
  </button>
  <div
    class="Expander__ExpandedContents-sc-fukmjx-3 iNZtAp"
  >
    <div
      class="OrganizationDetails__Details-sc-4gjwy4-0 hGohEJ"
    >
      <div
        class="OrganizationDetails__Description-sc-4gjwy4-1 dxZCwD"
      >
        <b
          class="typography__Bold-sc-1yq3b4j-6 hlMPgm"
        >
          Tietojen käyttölupa:
        </b>
         Lakiin perustuva tiedonkäyttölupa.
      </div>
      <a
        class="typography__Link-sc-1yq3b4j-5 cJIYQp"
        href="https://opintopolku.fi/wp/fi/tietosuojaseloste/"
        target="_blank"
      >
        <test-file-stub
          classname="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 dRZGgw"
        />
        <b
          class="typography__Bold-sc-1yq3b4j-6 hlMPgm"
        >
          Tarkempi kuvaus lähetetyistä tiedoista
        </b>
      </a>
    </div>
    <div
      class="LogEntries__Container-sc-ufvf4x-0 bWYhUd"
    >
      <div
        class="LogEntries__TopRow-sc-ufvf4x-1 cVnINA"
      >
        <button
          aria-pressed="false"
          class="ButtonSmall__TextButton-sc-r8zxw8-0 jPkZlO"
        >
          Näytä tietojen käyttökerrat
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Organization should render with organization permitted by user, and expand data when button is clicked 1`] = `
<div
  class="Expander__ExpanderContainer-sc-fukmjx-0 fExEJK"
>
  <button
    aria-pressed="false"
    class="Expander__ExpanderTitle-sc-fukmjx-2 ekUJgW"
  >
    <span
      aria-hidden="true"
      class="Expander__ExpanderPrefix-sc-fukmjx-1 cWphqs"
    >
      +
    </span>
    Organisaatio 2
  </button>
</div>
`;

exports[`Organization should render with organization permitted by user, and expand data when button is clicked 2`] = `
<div
  class="Expander__ExpanderContainer-sc-fukmjx-0 fExEJK"
>
  <button
    aria-pressed="true"
    class="Expander__ExpanderTitle-sc-fukmjx-2 gkGJNz"
  >
    <span
      aria-hidden="true"
      class="Expander__ExpanderPrefix-sc-fukmjx-1 cWphqs"
    >
      -
    </span>
    Organisaatio 2
  </button>
  <div
    class="Expander__ExpandedContents-sc-fukmjx-3 iNZtAp"
  >
    <div
      class="OrganizationDetails__Details-sc-4gjwy4-0 hGohEJ"
    >
      <div
        class="OrganizationDetails__Description-sc-4gjwy4-1 dxZCwD"
      >
        <b
          class="typography__Bold-sc-1yq3b4j-6 hlMPgm"
        >
          Tietojen käyttölupa:
        </b>
         Olet antanut tälle palvelutarjoajalle luvan käyttää tietojasi.
      </div>
      <a
        class="typography__Link-sc-1yq3b4j-5 cJIYQp"
        href="https://confluence.csc.fi/pages/viewpage.action?pageId=76536741"
        target="_blank"
      >
        <test-file-stub
          classname="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 dRZGgw"
        />
        <b
          class="typography__Bold-sc-1yq3b4j-6 hlMPgm"
        >
          Tarkempi kuvaus lähetetyistä tiedoista
        </b>
      </a>
    </div>
    <div
      class="LogEntries__Container-sc-ufvf4x-0 bWYhUd"
    >
      <div
        class="LogEntries__TopRow-sc-ufvf4x-1 cVnINA"
      >
        <button
          aria-pressed="false"
          class="ButtonSmall__TextButton-sc-r8zxw8-0 jPkZlO"
        >
          Näytä tietojen käyttökerrat
        </button>
      </div>
    </div>
  </div>
</div>
`;
